--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+December 19 2009, antoinedutot
+	* Moved GraphListenerProxy, GraphListenerProxyThread and GraphListenerProxyCopy into the ui
+	  package. These classes are now used only by the old viewer and replaced by io.ProxyPipe.
+	* The old viewer is still usable, although it does not use completely the new architecture.
+
+*** Bon le dernier changement date de juillet 2009 ... il me semble que l'API a changé entre temps :-) ***
+
 July 15 2009, antoinedutot
 	* Added the io2 package that will provide the new I/O mechanism that is everywhere in GS.
 	* The io2 package will become io when ready.
