--- a/README
+++ b/README
@@ -19,11 +19,11 @@ Authors
 
 This crap is made by :
 
-Yoann Pigné <yoann.pigne@univ-lehavre.fr> 
+Yoann Pignï¿½ <yoann.pigne@univ-lehavre.fr> 
 Antoine Dutot <antoine.dutot@univ-lehavre.fr>
-Guilhelm Savin <guilhelm.savin@gmail.com>
+Guilhelm Savin <http://github.com/gsavin>
 Julien Baudry <julien.baudry@univ-lehavre.fr>
-Frédéric Guinand <frederic.guinand@univ-lehavre.fr>
+Frï¿½dï¿½ric Guinand <frederic.guinand@univ-lehavre.fr>
 
 You can join all or one of these for questions, remarks and flames. Additionally
 if you want to join the development team, you are welcome.
