--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Welcome to GraphStream, and thank you for your download, we hope you will find i
 useful and practical.
 
 We are always interested by suggestions on how to make the library more developer
-friendly, see the website (www.graphstream-poject.org) for more information.
+friendly, see the website (www.graphstream-project.org) for more information.
 
 Installing GraphStream
 ----------------------
