Edited README via GitHub

--- a/README
+++ b/README
@@ -26,13 +26,13 @@ Guilhelm Savin <guilhelm.savin@graphstream-project.org>
 
 Contributor:
 
-Frédéric Guinand <frederic.guinand@univ-lehavre.fr>
+Frédéric Guinand <frederic.guinand@graphstream-project.org>
 
 
 Help
 ----
 
-You may check the documentation on the website (www.graphstream-peoject.org). 
+You may check the documentation on the website (www.graphstream-project.org). 
 You may also share your questions on the mailing list at 
 http://sympa.litislab.fr/sympa/subscribe/graphstream-users 
 
