Added the possibility to force a repaint of the viewer.
Put the "ui.repaint" attribute with no value on the graph to trigger a
repaint of the viewer.

--- a/src/org/graphstream/ui/graphicGraph/HowItWorks.mkd
+++ b/src/org/graphstream/ui/graphicGraph/HowItWorks.mkd
@@ -22,7 +22,7 @@ Basically, a graphic graph can be seen as the sum of three elements:
 * A set of style groups (`StyleGroupSet`) that define which graph elements maps to which styles.
 * A connectivity that allows to know which node it tied to which other one.
 
-``An important note``: The `GraphicGraph` class is *NOT* a general purpose graph! It is not even intented to be used as a graph, but only as an easy way to represent the graph data needed to display a graph. Although it implements the `Graph` interface, it would perform poorly in almost all usual tasks requiring a general purpose graph. The data structures in the `graph` package are far more optimized to this end. However, the `GraphicGraph` is fairly optimized to graph drawing. It allows to process the graph elements in their Z order, style group by style group. It allows to easily be notified when important UI attributes change (lable, position, color, size). It defines specific `Elements` classes like `GraphicNode`, `GraphicEdge` and the very special `GraphicSprite`. The reason `GraphicGraph` implements `Graph` is that it allows it to be a Sink for a general graph, and that it is far more elegant to see it as a `Graph` is most situations, however, internally, it is not stored as a graph but as a set of style groups, stored in Z order, with additional connectivity information.
+``An important note``: The `GraphicGraph` class is *NOT* a general purpose graph! It is not even intented to be used as a graph, but only as an easy way to represent the graph data needed to display a graph. Although it implements the `Graph` interface, it would perform poorly in almost all usual tasks requiring a general purpose graph. The data structures in the `graph` package are far more optimized to this end. However, the `GraphicGraph` is fairly optimized for graph drawing. It allows to process the graph elements in their Z order, style group by style group. It allows to easily be notified when important UI attributes change (label, position, color, size). It defines specific `Elements` classes like `GraphicNode`, `GraphicEdge` and the very special `GraphicSprite`. The reason `GraphicGraph` implements `Graph` is that it allows it to be a Sink for a general graph, and that it is far more elegant to see it as a `Graph` in most situations, however, internally, it is not stored as a graph but as a set of style groups, stored in Z order, with additional connectivity information.
 
 The graphic graph, graphs and threads
 -------------------------------------
@@ -55,7 +55,7 @@ We have chosen to duplicate the standard graph into what we call a graphic graph
 
 But why duplicate the graph ? We could merely synchronise the graph in the main thread to render it in the Swing thread. This would be a bad idea. The reason is that the display accesses the graph constantly. In some real-time renderers, the display refreshes at 24 frames per second (or more !). This means it accesses the graph 24 times per second. If we were using synchronisation, we would be locking the main graph 24 times per second, leaving a few moments only to the main thread to read and update the graph, which is also its main purpose. In other words, the benefits of having two threads would be null, we would sequentialize things with no thread working in parallel since their critical section, the shared section, the graph, would be locked every time.
 
-Instead we have chosen to consume a little more memory (you will see that the graphic graph tries to minimise its memory consumption, and is indeed not a complete copy of the main graph, but only the data needed to render it, for example, it does not store all attributes of the main graph), by storing a copy of the main graph as a graphic graph, an use the thread proxy mechanism to copy the main graph to the Swing graph. The mail box principle is a very thin layer between the two threads will little overhead. In addition it can be exchanged to a network proxy mechanism, allowing to put the graph computation on one machine and the display on a distant machine, which is an overly cool concept.   
+Instead we have chosen to consume a little more memory (you will see that the graphic graph tries to minimise its memory consumption, and is indeed not a complete copy of the main graph, but only the data needed to render it, for example, it does not store all attributes of the main graph), by storing a copy of the main graph as a graphic graph, and use the thread proxy mechanism to copy the main graph to the Swing graph. The mail box principle is a very thin layer between the two threads will little overhead. In addition it can be exchanged to a network proxy mechanism, allowing to put the graph computation on one machine and the display on a distant machine, which is an overly cool concept :-).
 
 How the graphic Graph works
 ---------------------------
